A1/sadhvi_mehta/src/y.output
Terminals unused in grammar

   tTRUE
   tFALSE
   tIF
   tELSE
   tBANG


Rules useless in parser due to conflicts

    6 stmts: %empty


State 0 conflicts: 1 shift/reduce
State 3 conflicts: 2 reduce/reduce
State 4 conflicts: 1 shift/reduce
State 13 conflicts: 2 reduce/reduce
State 73 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: decls stmts

    2 decls: %empty
    3      | decl decls

    4 decl: tVAR tIDENTIFIER tCOLON type tASSIGN exp tSEMICOLON
    5     | tVAR tIDENTIFIER tASSIGN exp tSEMICOLON

    6 stmts: %empty
    7      | stmt stmts
    8      | decls

    9 stmt: tREAD tLEFTPAREN exp tRIGHTPAREN tSEMICOLON
   10     | tPRINT tLEFTPAREN exp tRIGHTPAREN tSEMICOLON
   11     | tIDENTIFIER tASSIGN exp tSEMICOLON
   12     | tWHILE tLEFTPAREN exp tRIGHTPAREN tLEFTBRACE prog tRIGHTBRACE

   13 exp: exp tMINUS exp
   14    | exp tPLUS exp
   15    | exp tTIMES exp
   16    | exp tDIV exp
   17    | exp tGREATEREQUALS exp
   18    | exp tLESSEQUALS exp
   19    | exp tGREATER exp
   20    | exp tLESS exp
   21    | exp tEQUALS exp
   22    | exp tNOTEQUALS exp
   23    | exp tOR exp
   24    | exp tAND exp
   25    | tMINUS exp
   26    | tLEFTPAREN exp tRIGHTPAREN
   27    | value

   28 type: tSTRING
   29     | tFLOAT
   30     | tBOOL
   31     | tINT

   32 value: tINTVAL
   33      | tFLOATVAL
   34      | tBOOLVAL
   35      | tSTRINGVAL


Terminals, with rules where they appear

$end (0) 0
error (256)
tINTVAL (258) 32
tFLOATVAL (259) 33
tBOOLVAL (260) 34
tSTRINGVAL (261) 35
tIDENTIFIER (262) 4 5 11
tVAR (263) 4 5
tSTRING (264) 28
tFLOAT (265) 29
tBOOL (266) 30
tINT (267) 31
tTRUE (268)
tFALSE (269)
tWHILE (270) 12
tIF (271)
tELSE (272)
tPRINT (273) 10
tREAD (274) 9
tPLUS (275) 14
tMINUS (276) 13 25
tTIMES (277) 15
tDIV (278) 16
tEQUALS (279) 21
tNOTEQUALS (280) 22
tGREATEREQUALS (281) 17
tLESSEQUALS (282) 18
tGREATER (283) 19
tLESS (284) 20
tAND (285) 24
tOR (286) 23
tBANG (287)
tLEFTPAREN (288) 9 10 12 26
tRIGHTPAREN (289) 9 10 12 26
tLEFTBRACE (290) 12
tRIGHTBRACE (291) 12
tASSIGN (292) 4 5 11
tCOLON (293) 4
tSEMICOLON (294) 4 5 9 10 11
tNEG (295)


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
prog (42)
    on left: 1, on right: 0 12
decls (43)
    on left: 2 3, on right: 1 3 8
decl (44)
    on left: 4 5, on right: 3
stmts (45)
    on left: 6 7 8, on right: 1 7
stmt (46)
    on left: 9 10 11 12, on right: 7
exp (47)
    on left: 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27, on right:
    4 5 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26
type (48)
    on left: 28 29 30 31, on right: 4
value (49)
    on left: 32 33 34 35, on right: 27


State 0

    0 $accept: . prog $end

    tVAR  shift, and go to state 1

    tVAR      [reduce using rule 2 (decls)]
    $default  reduce using rule 2 (decls)

    prog   go to state 2
    decls  go to state 3
    decl   go to state 4


State 1

    4 decl: tVAR . tIDENTIFIER tCOLON type tASSIGN exp tSEMICOLON
    5     | tVAR . tIDENTIFIER tASSIGN exp tSEMICOLON

    tIDENTIFIER  shift, and go to state 5


State 2

    0 $accept: prog . $end

    $end  shift, and go to state 6


State 3

    1 prog: decls . stmts

    tIDENTIFIER  shift, and go to state 7
    tVAR         shift, and go to state 1
    tWHILE       shift, and go to state 8
    tPRINT       shift, and go to state 9
    tREAD        shift, and go to state 10

    $end         reduce using rule 2 (decls)
    $end         [reduce using rule 6 (stmts)]
    tRIGHTBRACE  reduce using rule 2 (decls)
    tRIGHTBRACE  [reduce using rule 6 (stmts)]
    $default     reduce using rule 2 (decls)

    decls  go to state 11
    decl   go to state 4
    stmts  go to state 12
    stmt   go to state 13


State 4

    3 decls: decl . decls

    tVAR  shift, and go to state 1

    tVAR      [reduce using rule 2 (decls)]
    $default  reduce using rule 2 (decls)

    decls  go to state 14
    decl   go to state 4


State 5

    4 decl: tVAR tIDENTIFIER . tCOLON type tASSIGN exp tSEMICOLON
    5     | tVAR tIDENTIFIER . tASSIGN exp tSEMICOLON

    tASSIGN  shift, and go to state 15
    tCOLON   shift, and go to state 16


State 6

    0 $accept: prog $end .

    $default  accept


State 7

   11 stmt: tIDENTIFIER . tASSIGN exp tSEMICOLON

    tASSIGN  shift, and go to state 17


State 8

   12 stmt: tWHILE . tLEFTPAREN exp tRIGHTPAREN tLEFTBRACE prog tRIGHTBRACE

    tLEFTPAREN  shift, and go to state 18


State 9

   10 stmt: tPRINT . tLEFTPAREN exp tRIGHTPAREN tSEMICOLON

    tLEFTPAREN  shift, and go to state 19


State 10

    9 stmt: tREAD . tLEFTPAREN exp tRIGHTPAREN tSEMICOLON

    tLEFTPAREN  shift, and go to state 20


State 11

    8 stmts: decls .

    $default  reduce using rule 8 (stmts)


State 12

    1 prog: decls stmts .

    $default  reduce using rule 1 (prog)


State 13

    7 stmts: stmt . stmts

    tIDENTIFIER  shift, and go to state 7
    tVAR         shift, and go to state 1
    tWHILE       shift, and go to state 8
    tPRINT       shift, and go to state 9
    tREAD        shift, and go to state 10

    $end         reduce using rule 2 (decls)
    $end         [reduce using rule 6 (stmts)]
    tRIGHTBRACE  reduce using rule 2 (decls)
    tRIGHTBRACE  [reduce using rule 6 (stmts)]
    $default     reduce using rule 2 (decls)

    decls  go to state 11
    decl   go to state 4
    stmts  go to state 21
    stmt   go to state 13


State 14

    3 decls: decl decls .

    $default  reduce using rule 3 (decls)


State 15

    5 decl: tVAR tIDENTIFIER tASSIGN . exp tSEMICOLON

    tINTVAL     shift, and go to state 22
    tFLOATVAL   shift, and go to state 23
    tBOOLVAL    shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tMINUS      shift, and go to state 26
    tLEFTPAREN  shift, and go to state 27

    exp    go to state 28
    value  go to state 29


State 16

    4 decl: tVAR tIDENTIFIER tCOLON . type tASSIGN exp tSEMICOLON

    tSTRING  shift, and go to state 30
    tFLOAT   shift, and go to state 31
    tBOOL    shift, and go to state 32
    tINT     shift, and go to state 33

    type  go to state 34


State 17

   11 stmt: tIDENTIFIER tASSIGN . exp tSEMICOLON

    tINTVAL     shift, and go to state 22
    tFLOATVAL   shift, and go to state 23
    tBOOLVAL    shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tMINUS      shift, and go to state 26
    tLEFTPAREN  shift, and go to state 27

    exp    go to state 35
    value  go to state 29


State 18

   12 stmt: tWHILE tLEFTPAREN . exp tRIGHTPAREN tLEFTBRACE prog tRIGHTBRACE

    tINTVAL     shift, and go to state 22
    tFLOATVAL   shift, and go to state 23
    tBOOLVAL    shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tMINUS      shift, and go to state 26
    tLEFTPAREN  shift, and go to state 27

    exp    go to state 36
    value  go to state 29


State 19

   10 stmt: tPRINT tLEFTPAREN . exp tRIGHTPAREN tSEMICOLON

    tINTVAL     shift, and go to state 22
    tFLOATVAL   shift, and go to state 23
    tBOOLVAL    shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tMINUS      shift, and go to state 26
    tLEFTPAREN  shift, and go to state 27

    exp    go to state 37
    value  go to state 29


State 20

    9 stmt: tREAD tLEFTPAREN . exp tRIGHTPAREN tSEMICOLON

    tINTVAL     shift, and go to state 22
    tFLOATVAL   shift, and go to state 23
    tBOOLVAL    shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tMINUS      shift, and go to state 26
    tLEFTPAREN  shift, and go to state 27

    exp    go to state 38
    value  go to state 29


State 21

    7 stmts: stmt stmts .

    $default  reduce using rule 7 (stmts)


State 22

   32 value: tINTVAL .

    $default  reduce using rule 32 (value)


State 23

   33 value: tFLOATVAL .

    $default  reduce using rule 33 (value)


State 24

   34 value: tBOOLVAL .

    $default  reduce using rule 34 (value)


State 25

   35 value: tSTRINGVAL .

    $default  reduce using rule 35 (value)


State 26

   25 exp: tMINUS . exp

    tINTVAL     shift, and go to state 22
    tFLOATVAL   shift, and go to state 23
    tBOOLVAL    shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tMINUS      shift, and go to state 26
    tLEFTPAREN  shift, and go to state 27

    exp    go to state 39
    value  go to state 29


State 27

   26 exp: tLEFTPAREN . exp tRIGHTPAREN

    tINTVAL     shift, and go to state 22
    tFLOATVAL   shift, and go to state 23
    tBOOLVAL    shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tMINUS      shift, and go to state 26
    tLEFTPAREN  shift, and go to state 27

    exp    go to state 40
    value  go to state 29


State 28

    5 decl: tVAR tIDENTIFIER tASSIGN exp . tSEMICOLON
   13 exp: exp . tMINUS exp
   14    | exp . tPLUS exp
   15    | exp . tTIMES exp
   16    | exp . tDIV exp
   17    | exp . tGREATEREQUALS exp
   18    | exp . tLESSEQUALS exp
   19    | exp . tGREATER exp
   20    | exp . tLESS exp
   21    | exp . tEQUALS exp
   22    | exp . tNOTEQUALS exp
   23    | exp . tOR exp
   24    | exp . tAND exp

    tPLUS           shift, and go to state 41
    tMINUS          shift, and go to state 42
    tTIMES          shift, and go to state 43
    tDIV            shift, and go to state 44
    tEQUALS         shift, and go to state 45
    tNOTEQUALS      shift, and go to state 46
    tGREATEREQUALS  shift, and go to state 47
    tLESSEQUALS     shift, and go to state 48
    tGREATER        shift, and go to state 49
    tLESS           shift, and go to state 50
    tAND            shift, and go to state 51
    tOR             shift, and go to state 52
    tSEMICOLON      shift, and go to state 53


State 29

   27 exp: value .

    $default  reduce using rule 27 (exp)


State 30

   28 type: tSTRING .

    $default  reduce using rule 28 (type)


State 31

   29 type: tFLOAT .

    $default  reduce using rule 29 (type)


State 32

   30 type: tBOOL .

    $default  reduce using rule 30 (type)


State 33

   31 type: tINT .

    $default  reduce using rule 31 (type)


State 34

    4 decl: tVAR tIDENTIFIER tCOLON type . tASSIGN exp tSEMICOLON

    tASSIGN  shift, and go to state 54


State 35

   11 stmt: tIDENTIFIER tASSIGN exp . tSEMICOLON
   13 exp: exp . tMINUS exp
   14    | exp . tPLUS exp
   15    | exp . tTIMES exp
   16    | exp . tDIV exp
   17    | exp . tGREATEREQUALS exp
   18    | exp . tLESSEQUALS exp
   19    | exp . tGREATER exp
   20    | exp . tLESS exp
   21    | exp . tEQUALS exp
   22    | exp . tNOTEQUALS exp
   23    | exp . tOR exp
   24    | exp . tAND exp

    tPLUS           shift, and go to state 41
    tMINUS          shift, and go to state 42
    tTIMES          shift, and go to state 43
    tDIV            shift, and go to state 44
    tEQUALS         shift, and go to state 45
    tNOTEQUALS      shift, and go to state 46
    tGREATEREQUALS  shift, and go to state 47
    tLESSEQUALS     shift, and go to state 48
    tGREATER        shift, and go to state 49
    tLESS           shift, and go to state 50
    tAND            shift, and go to state 51
    tOR             shift, and go to state 52
    tSEMICOLON      shift, and go to state 55


State 36

   12 stmt: tWHILE tLEFTPAREN exp . tRIGHTPAREN tLEFTBRACE prog tRIGHTBRACE
   13 exp: exp . tMINUS exp
   14    | exp . tPLUS exp
   15    | exp . tTIMES exp
   16    | exp . tDIV exp
   17    | exp . tGREATEREQUALS exp
   18    | exp . tLESSEQUALS exp
   19    | exp . tGREATER exp
   20    | exp . tLESS exp
   21    | exp . tEQUALS exp
   22    | exp . tNOTEQUALS exp
   23    | exp . tOR exp
   24    | exp . tAND exp

    tPLUS           shift, and go to state 41
    tMINUS          shift, and go to state 42
    tTIMES          shift, and go to state 43
    tDIV            shift, and go to state 44
    tEQUALS         shift, and go to state 45
    tNOTEQUALS      shift, and go to state 46
    tGREATEREQUALS  shift, and go to state 47
    tLESSEQUALS     shift, and go to state 48
    tGREATER        shift, and go to state 49
    tLESS           shift, and go to state 50
    tAND            shift, and go to state 51
    tOR             shift, and go to state 52
    tRIGHTPAREN     shift, and go to state 56


State 37

   10 stmt: tPRINT tLEFTPAREN exp . tRIGHTPAREN tSEMICOLON
   13 exp: exp . tMINUS exp
   14    | exp . tPLUS exp
   15    | exp . tTIMES exp
   16    | exp . tDIV exp
   17    | exp . tGREATEREQUALS exp
   18    | exp . tLESSEQUALS exp
   19    | exp . tGREATER exp
   20    | exp . tLESS exp
   21    | exp . tEQUALS exp
   22    | exp . tNOTEQUALS exp
   23    | exp . tOR exp
   24    | exp . tAND exp

    tPLUS           shift, and go to state 41
    tMINUS          shift, and go to state 42
    tTIMES          shift, and go to state 43
    tDIV            shift, and go to state 44
    tEQUALS         shift, and go to state 45
    tNOTEQUALS      shift, and go to state 46
    tGREATEREQUALS  shift, and go to state 47
    tLESSEQUALS     shift, and go to state 48
    tGREATER        shift, and go to state 49
    tLESS           shift, and go to state 50
    tAND            shift, and go to state 51
    tOR             shift, and go to state 52
    tRIGHTPAREN     shift, and go to state 57


State 38

    9 stmt: tREAD tLEFTPAREN exp . tRIGHTPAREN tSEMICOLON
   13 exp: exp . tMINUS exp
   14    | exp . tPLUS exp
   15    | exp . tTIMES exp
   16    | exp . tDIV exp
   17    | exp . tGREATEREQUALS exp
   18    | exp . tLESSEQUALS exp
   19    | exp . tGREATER exp
   20    | exp . tLESS exp
   21    | exp . tEQUALS exp
   22    | exp . tNOTEQUALS exp
   23    | exp . tOR exp
   24    | exp . tAND exp

    tPLUS           shift, and go to state 41
    tMINUS          shift, and go to state 42
    tTIMES          shift, and go to state 43
    tDIV            shift, and go to state 44
    tEQUALS         shift, and go to state 45
    tNOTEQUALS      shift, and go to state 46
    tGREATEREQUALS  shift, and go to state 47
    tLESSEQUALS     shift, and go to state 48
    tGREATER        shift, and go to state 49
    tLESS           shift, and go to state 50
    tAND            shift, and go to state 51
    tOR             shift, and go to state 52
    tRIGHTPAREN     shift, and go to state 58


State 39

   13 exp: exp . tMINUS exp
   14    | exp . tPLUS exp
   15    | exp . tTIMES exp
   16    | exp . tDIV exp
   17    | exp . tGREATEREQUALS exp
   18    | exp . tLESSEQUALS exp
   19    | exp . tGREATER exp
   20    | exp . tLESS exp
   21    | exp . tEQUALS exp
   22    | exp . tNOTEQUALS exp
   23    | exp . tOR exp
   24    | exp . tAND exp
   25    | tMINUS exp .

    $default  reduce using rule 25 (exp)


State 40

   13 exp: exp . tMINUS exp
   14    | exp . tPLUS exp
   15    | exp . tTIMES exp
   16    | exp . tDIV exp
   17    | exp . tGREATEREQUALS exp
   18    | exp . tLESSEQUALS exp
   19    | exp . tGREATER exp
   20    | exp . tLESS exp
   21    | exp . tEQUALS exp
   22    | exp . tNOTEQUALS exp
   23    | exp . tOR exp
   24    | exp . tAND exp
   26    | tLEFTPAREN exp . tRIGHTPAREN

    tPLUS           shift, and go to state 41
    tMINUS          shift, and go to state 42
    tTIMES          shift, and go to state 43
    tDIV            shift, and go to state 44
    tEQUALS         shift, and go to state 45
    tNOTEQUALS      shift, and go to state 46
    tGREATEREQUALS  shift, and go to state 47
    tLESSEQUALS     shift, and go to state 48
    tGREATER        shift, and go to state 49
    tLESS           shift, and go to state 50
    tAND            shift, and go to state 51
    tOR             shift, and go to state 52
    tRIGHTPAREN     shift, and go to state 59


State 41

   14 exp: exp tPLUS . exp

    tINTVAL     shift, and go to state 22
    tFLOATVAL   shift, and go to state 23
    tBOOLVAL    shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tMINUS      shift, and go to state 26
    tLEFTPAREN  shift, and go to state 27

    exp    go to state 60
    value  go to state 29


State 42

   13 exp: exp tMINUS . exp

    tINTVAL     shift, and go to state 22
    tFLOATVAL   shift, and go to state 23
    tBOOLVAL    shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tMINUS      shift, and go to state 26
    tLEFTPAREN  shift, and go to state 27

    exp    go to state 61
    value  go to state 29


State 43

   15 exp: exp tTIMES . exp

    tINTVAL     shift, and go to state 22
    tFLOATVAL   shift, and go to state 23
    tBOOLVAL    shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tMINUS      shift, and go to state 26
    tLEFTPAREN  shift, and go to state 27

    exp    go to state 62
    value  go to state 29


State 44

   16 exp: exp tDIV . exp

    tINTVAL     shift, and go to state 22
    tFLOATVAL   shift, and go to state 23
    tBOOLVAL    shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tMINUS      shift, and go to state 26
    tLEFTPAREN  shift, and go to state 27

    exp    go to state 63
    value  go to state 29


State 45

   21 exp: exp tEQUALS . exp

    tINTVAL     shift, and go to state 22
    tFLOATVAL   shift, and go to state 23
    tBOOLVAL    shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tMINUS      shift, and go to state 26
    tLEFTPAREN  shift, and go to state 27

    exp    go to state 64
    value  go to state 29


State 46

   22 exp: exp tNOTEQUALS . exp

    tINTVAL     shift, and go to state 22
    tFLOATVAL   shift, and go to state 23
    tBOOLVAL    shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tMINUS      shift, and go to state 26
    tLEFTPAREN  shift, and go to state 27

    exp    go to state 65
    value  go to state 29


State 47

   17 exp: exp tGREATEREQUALS . exp

    tINTVAL     shift, and go to state 22
    tFLOATVAL   shift, and go to state 23
    tBOOLVAL    shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tMINUS      shift, and go to state 26
    tLEFTPAREN  shift, and go to state 27

    exp    go to state 66
    value  go to state 29


State 48

   18 exp: exp tLESSEQUALS . exp

    tINTVAL     shift, and go to state 22
    tFLOATVAL   shift, and go to state 23
    tBOOLVAL    shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tMINUS      shift, and go to state 26
    tLEFTPAREN  shift, and go to state 27

    exp    go to state 67
    value  go to state 29


State 49

   19 exp: exp tGREATER . exp

    tINTVAL     shift, and go to state 22
    tFLOATVAL   shift, and go to state 23
    tBOOLVAL    shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tMINUS      shift, and go to state 26
    tLEFTPAREN  shift, and go to state 27

    exp    go to state 68
    value  go to state 29


State 50

   20 exp: exp tLESS . exp

    tINTVAL     shift, and go to state 22
    tFLOATVAL   shift, and go to state 23
    tBOOLVAL    shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tMINUS      shift, and go to state 26
    tLEFTPAREN  shift, and go to state 27

    exp    go to state 69
    value  go to state 29


State 51

   24 exp: exp tAND . exp

    tINTVAL     shift, and go to state 22
    tFLOATVAL   shift, and go to state 23
    tBOOLVAL    shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tMINUS      shift, and go to state 26
    tLEFTPAREN  shift, and go to state 27

    exp    go to state 70
    value  go to state 29


State 52

   23 exp: exp tOR . exp

    tINTVAL     shift, and go to state 22
    tFLOATVAL   shift, and go to state 23
    tBOOLVAL    shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tMINUS      shift, and go to state 26
    tLEFTPAREN  shift, and go to state 27

    exp    go to state 71
    value  go to state 29


State 53

    5 decl: tVAR tIDENTIFIER tASSIGN exp tSEMICOLON .

    $default  reduce using rule 5 (decl)


State 54

    4 decl: tVAR tIDENTIFIER tCOLON type tASSIGN . exp tSEMICOLON

    tINTVAL     shift, and go to state 22
    tFLOATVAL   shift, and go to state 23
    tBOOLVAL    shift, and go to state 24
    tSTRINGVAL  shift, and go to state 25
    tMINUS      shift, and go to state 26
    tLEFTPAREN  shift, and go to state 27

    exp    go to state 72
    value  go to state 29


State 55

   11 stmt: tIDENTIFIER tASSIGN exp tSEMICOLON .

    $default  reduce using rule 11 (stmt)


State 56

   12 stmt: tWHILE tLEFTPAREN exp tRIGHTPAREN . tLEFTBRACE prog tRIGHTBRACE

    tLEFTBRACE  shift, and go to state 73


State 57

   10 stmt: tPRINT tLEFTPAREN exp tRIGHTPAREN . tSEMICOLON

    tSEMICOLON  shift, and go to state 74


State 58

    9 stmt: tREAD tLEFTPAREN exp tRIGHTPAREN . tSEMICOLON

    tSEMICOLON  shift, and go to state 75


State 59

   26 exp: tLEFTPAREN exp tRIGHTPAREN .

    $default  reduce using rule 26 (exp)


State 60

   13 exp: exp . tMINUS exp
   14    | exp . tPLUS exp
   14    | exp tPLUS exp .
   15    | exp . tTIMES exp
   16    | exp . tDIV exp
   17    | exp . tGREATEREQUALS exp
   18    | exp . tLESSEQUALS exp
   19    | exp . tGREATER exp
   20    | exp . tLESS exp
   21    | exp . tEQUALS exp
   22    | exp . tNOTEQUALS exp
   23    | exp . tOR exp
   24    | exp . tAND exp

    tTIMES  shift, and go to state 43
    tDIV    shift, and go to state 44

    $default  reduce using rule 14 (exp)


State 61

   13 exp: exp . tMINUS exp
   13    | exp tMINUS exp .
   14    | exp . tPLUS exp
   15    | exp . tTIMES exp
   16    | exp . tDIV exp
   17    | exp . tGREATEREQUALS exp
   18    | exp . tLESSEQUALS exp
   19    | exp . tGREATER exp
   20    | exp . tLESS exp
   21    | exp . tEQUALS exp
   22    | exp . tNOTEQUALS exp
   23    | exp . tOR exp
   24    | exp . tAND exp

    tTIMES  shift, and go to state 43
    tDIV    shift, and go to state 44

    $default  reduce using rule 13 (exp)


State 62

   13 exp: exp . tMINUS exp
   14    | exp . tPLUS exp
   15    | exp . tTIMES exp
   15    | exp tTIMES exp .
   16    | exp . tDIV exp
   17    | exp . tGREATEREQUALS exp
   18    | exp . tLESSEQUALS exp
   19    | exp . tGREATER exp
   20    | exp . tLESS exp
   21    | exp . tEQUALS exp
   22    | exp . tNOTEQUALS exp
   23    | exp . tOR exp
   24    | exp . tAND exp

    $default  reduce using rule 15 (exp)


State 63

   13 exp: exp . tMINUS exp
   14    | exp . tPLUS exp
   15    | exp . tTIMES exp
   16    | exp . tDIV exp
   16    | exp tDIV exp .
   17    | exp . tGREATEREQUALS exp
   18    | exp . tLESSEQUALS exp
   19    | exp . tGREATER exp
   20    | exp . tLESS exp
   21    | exp . tEQUALS exp
   22    | exp . tNOTEQUALS exp
   23    | exp . tOR exp
   24    | exp . tAND exp

    $default  reduce using rule 16 (exp)


State 64

   13 exp: exp . tMINUS exp
   14    | exp . tPLUS exp
   15    | exp . tTIMES exp
   16    | exp . tDIV exp
   17    | exp . tGREATEREQUALS exp
   18    | exp . tLESSEQUALS exp
   19    | exp . tGREATER exp
   20    | exp . tLESS exp
   21    | exp . tEQUALS exp
   21    | exp tEQUALS exp .
   22    | exp . tNOTEQUALS exp
   23    | exp . tOR exp
   24    | exp . tAND exp

    tPLUS           shift, and go to state 41
    tMINUS          shift, and go to state 42
    tTIMES          shift, and go to state 43
    tDIV            shift, and go to state 44
    tGREATEREQUALS  shift, and go to state 47
    tLESSEQUALS     shift, and go to state 48
    tGREATER        shift, and go to state 49
    tLESS           shift, and go to state 50

    $default  reduce using rule 21 (exp)


State 65

   13 exp: exp . tMINUS exp
   14    | exp . tPLUS exp
   15    | exp . tTIMES exp
   16    | exp . tDIV exp
   17    | exp . tGREATEREQUALS exp
   18    | exp . tLESSEQUALS exp
   19    | exp . tGREATER exp
   20    | exp . tLESS exp
   21    | exp . tEQUALS exp
   22    | exp . tNOTEQUALS exp
   22    | exp tNOTEQUALS exp .
   23    | exp . tOR exp
   24    | exp . tAND exp

    tPLUS           shift, and go to state 41
    tMINUS          shift, and go to state 42
    tTIMES          shift, and go to state 43
    tDIV            shift, and go to state 44
    tGREATEREQUALS  shift, and go to state 47
    tLESSEQUALS     shift, and go to state 48
    tGREATER        shift, and go to state 49
    tLESS           shift, and go to state 50

    $default  reduce using rule 22 (exp)


State 66

   13 exp: exp . tMINUS exp
   14    | exp . tPLUS exp
   15    | exp . tTIMES exp
   16    | exp . tDIV exp
   17    | exp . tGREATEREQUALS exp
   17    | exp tGREATEREQUALS exp .
   18    | exp . tLESSEQUALS exp
   19    | exp . tGREATER exp
   20    | exp . tLESS exp
   21    | exp . tEQUALS exp
   22    | exp . tNOTEQUALS exp
   23    | exp . tOR exp
   24    | exp . tAND exp

    tPLUS   shift, and go to state 41
    tMINUS  shift, and go to state 42
    tTIMES  shift, and go to state 43
    tDIV    shift, and go to state 44

    $default  reduce using rule 17 (exp)


State 67

   13 exp: exp . tMINUS exp
   14    | exp . tPLUS exp
   15    | exp . tTIMES exp
   16    | exp . tDIV exp
   17    | exp . tGREATEREQUALS exp
   18    | exp . tLESSEQUALS exp
   18    | exp tLESSEQUALS exp .
   19    | exp . tGREATER exp
   20    | exp . tLESS exp
   21    | exp . tEQUALS exp
   22    | exp . tNOTEQUALS exp
   23    | exp . tOR exp
   24    | exp . tAND exp

    tPLUS   shift, and go to state 41
    tMINUS  shift, and go to state 42
    tTIMES  shift, and go to state 43
    tDIV    shift, and go to state 44

    $default  reduce using rule 18 (exp)


State 68

   13 exp: exp . tMINUS exp
   14    | exp . tPLUS exp
   15    | exp . tTIMES exp
   16    | exp . tDIV exp
   17    | exp . tGREATEREQUALS exp
   18    | exp . tLESSEQUALS exp
   19    | exp . tGREATER exp
   19    | exp tGREATER exp .
   20    | exp . tLESS exp
   21    | exp . tEQUALS exp
   22    | exp . tNOTEQUALS exp
   23    | exp . tOR exp
   24    | exp . tAND exp

    tPLUS   shift, and go to state 41
    tMINUS  shift, and go to state 42
    tTIMES  shift, and go to state 43
    tDIV    shift, and go to state 44

    $default  reduce using rule 19 (exp)


State 69

   13 exp: exp . tMINUS exp
   14    | exp . tPLUS exp
   15    | exp . tTIMES exp
   16    | exp . tDIV exp
   17    | exp . tGREATEREQUALS exp
   18    | exp . tLESSEQUALS exp
   19    | exp . tGREATER exp
   20    | exp . tLESS exp
   20    | exp tLESS exp .
   21    | exp . tEQUALS exp
   22    | exp . tNOTEQUALS exp
   23    | exp . tOR exp
   24    | exp . tAND exp

    tPLUS   shift, and go to state 41
    tMINUS  shift, and go to state 42
    tTIMES  shift, and go to state 43
    tDIV    shift, and go to state 44

    $default  reduce using rule 20 (exp)


State 70

   13 exp: exp . tMINUS exp
   14    | exp . tPLUS exp
   15    | exp . tTIMES exp
   16    | exp . tDIV exp
   17    | exp . tGREATEREQUALS exp
   18    | exp . tLESSEQUALS exp
   19    | exp . tGREATER exp
   20    | exp . tLESS exp
   21    | exp . tEQUALS exp
   22    | exp . tNOTEQUALS exp
   23    | exp . tOR exp
   24    | exp . tAND exp
   24    | exp tAND exp .

    tPLUS           shift, and go to state 41
    tMINUS          shift, and go to state 42
    tTIMES          shift, and go to state 43
    tDIV            shift, and go to state 44
    tEQUALS         shift, and go to state 45
    tNOTEQUALS      shift, and go to state 46
    tGREATEREQUALS  shift, and go to state 47
    tLESSEQUALS     shift, and go to state 48
    tGREATER        shift, and go to state 49
    tLESS           shift, and go to state 50

    $default  reduce using rule 24 (exp)


State 71

   13 exp: exp . tMINUS exp
   14    | exp . tPLUS exp
   15    | exp . tTIMES exp
   16    | exp . tDIV exp
   17    | exp . tGREATEREQUALS exp
   18    | exp . tLESSEQUALS exp
   19    | exp . tGREATER exp
   20    | exp . tLESS exp
   21    | exp . tEQUALS exp
   22    | exp . tNOTEQUALS exp
   23    | exp . tOR exp
   23    | exp tOR exp .
   24    | exp . tAND exp

    tPLUS           shift, and go to state 41
    tMINUS          shift, and go to state 42
    tTIMES          shift, and go to state 43
    tDIV            shift, and go to state 44
    tEQUALS         shift, and go to state 45
    tNOTEQUALS      shift, and go to state 46
    tGREATEREQUALS  shift, and go to state 47
    tLESSEQUALS     shift, and go to state 48
    tGREATER        shift, and go to state 49
    tLESS           shift, and go to state 50
    tAND            shift, and go to state 51

    $default  reduce using rule 23 (exp)


State 72

    4 decl: tVAR tIDENTIFIER tCOLON type tASSIGN exp . tSEMICOLON
   13 exp: exp . tMINUS exp
   14    | exp . tPLUS exp
   15    | exp . tTIMES exp
   16    | exp . tDIV exp
   17    | exp . tGREATEREQUALS exp
   18    | exp . tLESSEQUALS exp
   19    | exp . tGREATER exp
   20    | exp . tLESS exp
   21    | exp . tEQUALS exp
   22    | exp . tNOTEQUALS exp
   23    | exp . tOR exp
   24    | exp . tAND exp

    tPLUS           shift, and go to state 41
    tMINUS          shift, and go to state 42
    tTIMES          shift, and go to state 43
    tDIV            shift, and go to state 44
    tEQUALS         shift, and go to state 45
    tNOTEQUALS      shift, and go to state 46
    tGREATEREQUALS  shift, and go to state 47
    tLESSEQUALS     shift, and go to state 48
    tGREATER        shift, and go to state 49
    tLESS           shift, and go to state 50
    tAND            shift, and go to state 51
    tOR             shift, and go to state 52
    tSEMICOLON      shift, and go to state 76


State 73

   12 stmt: tWHILE tLEFTPAREN exp tRIGHTPAREN tLEFTBRACE . prog tRIGHTBRACE

    tVAR  shift, and go to state 1

    tVAR      [reduce using rule 2 (decls)]
    $default  reduce using rule 2 (decls)

    prog   go to state 77
    decls  go to state 3
    decl   go to state 4


State 74

   10 stmt: tPRINT tLEFTPAREN exp tRIGHTPAREN tSEMICOLON .

    $default  reduce using rule 10 (stmt)


State 75

    9 stmt: tREAD tLEFTPAREN exp tRIGHTPAREN tSEMICOLON .

    $default  reduce using rule 9 (stmt)


State 76

    4 decl: tVAR tIDENTIFIER tCOLON type tASSIGN exp tSEMICOLON .

    $default  reduce using rule 4 (decl)


State 77

   12 stmt: tWHILE tLEFTPAREN exp tRIGHTPAREN tLEFTBRACE prog . tRIGHTBRACE

    tRIGHTBRACE  shift, and go to state 78


State 78

   12 stmt: tWHILE tLEFTPAREN exp tRIGHTPAREN tLEFTBRACE prog tRIGHTBRACE .

    $default  reduce using rule 12 (stmt)
